[gd_scene load_steps=3 format=3 uid="uid://dn7vyfv0gwa5d"]

[ext_resource type="Script" path="res://scenes/dialogue/common/dialogue_box.gd" id="1_hqupj"]
[ext_resource type="Texture2D" uid="uid://45clh1arwbt0" path="res://scenes/dialogue/common/assets/box.png" id="2_0f88j"]

[node name="DialogueBox" type="Node2D"]
script = ExtResource("1_hqupj")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Box" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(-9, -21)
scale = Vector2(1.0225, 1.205)
texture = ExtResource("2_0f88j")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Name"

[node name="Text" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "asdjghsidfb dfskjnbsdfhbsjhdbogfoifjgsdfhh kdfjg roirgj dfkgjdsfgfd gskldfj sofdj gfdshgdfsjg;hdfb eof gfdsohgadf goiw"
autowrap_mode = 2

[node name="TypingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05

[connection signal="timeout" from="TypingTimer" to="." method="_on_typing_timer_timeout"]
